# sorceress

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  default.nix
.semaphore/: semaphore.yml
ci/: build-dependencies
nix/: fix-scheduler-race.patch  sources.nix  supercollider.nix
src/: lib.rs  pattern.rs  scheduler.rs  server.rs  synthdef.rs  ugen.rs  vectree.rs
src/pattern/: player.rs
src/scheduler/: scheduler_impl.rs
src/server/: osc_router.rs  private.rs
src/synthdef/: decoder.rs  encoder.rs
src/ugen/: envelope.rs
tests/: synthdef_test.rs
tests/data/: synthdefs.sc
