[package]
name = "sorceress"
version = "0.1.0"
authors = ["Wesley Merkel <ooesili@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ooesili/sorceress"
readme = "README.md"
description = "A Rust environment for making music and sounds with SuperCollider."
keywords = ["audio", "bindings", "creative", "music", "supercollider"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"

exclude = [
  "assets/*",
  "default.nix",
  "nix/*",
]

[dependencies]
rosc = "0.4.3"
log = "0.4.14"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
