[package]
name = "sorceress"
version = "0.2.0"
authors = ["Wesley Merkel <ooesili@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ooesili/sorceress"
readme = "README.md"
description = "A Rust environment for making music and sounds with SuperCollider."
keywords = ["audio", "bindings", "creative", "music", "supercollider"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"

exclude = [
  ".semaphore/*",
  "assets/*",
  "ci/*",
  "default.nix",
  "nix/*",
]

[dependencies]
rosc = "0.5.1"
log = "0.4.14"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
